--- a/index-START.html
+++ b/index-START.html
@@ -87,6 +87,7 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size: 40px;
     }
 
@@ -122,7 +123,13 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+    
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
   </script>
 
 
